Begin membrane implementation